# sfml_project

./: CMakeLists.txt  README.md
include/: game.hpp  input.hpp  print.hpp
src/: game.cpp  input.cpp  main.cpp  print.cpp
video/: simplescreenrecorder-2023-01-15_14.53.47.mkv
